JBR25 linux build script
Uses
- glibc from ubuntu 14.04
- wayland-protocol from head
- rest build dependencies (majority) from ubuntu:20.04

Added a new set of scripts to download build dependencies from
ubuntu:20.04 for hermetic JBR25 linux build

Bug: 469841005
Change-Id: Ieefd1fc3e9adbd377570d6114ec7f407d815ce05